--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 
 .socios{
     
-    background-image: linear-gradient(#a1a7b6, #051437);
+    background-image: linear-gradient(#051437,#a1a7b6);
     color: white;
     display: flex;
     justify-content: center;
@@ -75,7 +75,7 @@
 
 .div-maior{
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 40% 25% 25% 25%;
     
     justify-content: center;
     padding: 0;
@@ -85,6 +85,7 @@
 .titulo-socios-torcedores{
     text-align: justify;
     flex-wrap: wrap;
+    margin-left: px;
 }
 
 .div-conteudo-socio{
@@ -94,18 +95,20 @@
 }
 
 .nomes-socio{
-
+    text-align: left;
 }
 
 .foto-socio{
     width: 100px;
     height: 140px;
-    padding-left: 40px;
+    margin-left: 0px;
+    border: 2px solid;
+    border-radius: 3px;
 
 }
 
 .github-icon{
     width: 40px;
     margin-top: 10px;
-    display:
+    text-align: center;
 }
